--- a/vis_crypto/templates/vis_crypto/base.html
+++ b/vis_crypto/templates/vis_crypto/base.html
@@ -1,18 +1,20 @@
 {%load static%}
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Crypto Currency Visualization</title>
-
-<body style="font-family: Arial, sans-serif; margin: 0; padding: 0;">
-
-
-  <div class="grid-container">
-
-    <h1>Cryptocurrency Visualisation Using Django Templating Engine</h1>
-
-  </div>
-</body>
-</html>
+    <!DOCTYPE html>
+    <html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Crypto Currency Visualization</title>
+        <link rel="stylesheet" href="{% static 'Vis_Cryp/base.css' %}">
+        <link rel="stylesheet" href="{% static 'Vis_Cryp/chart.css' %}">
+        <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    </head>
+    <body style="margin-top:150px">
+    <div class="grid-container">
+            <div class="grid-item">
+            {% include content1.template_name with stuff=content1.data %}
+            </div>
+        </div>
+    </div>
+    </body>
+    </html>
