--- a/vis_crypto/templates/vis_crypto/chart.html
+++ b/vis_crypto/templates/vis_crypto/chart.html
@@ -1,4 +1,20 @@
 <div class="chart-container">
+    
+    <form id="dropdownForm" style="margin-bottom: 20px; width: 800px;">
+        <select id="dropdown" name="dropdown">
+            <option value="" disabled selected>Select A Cryptocurrency</option>
+            {% for option in stuff.coin_id_list %}
+                <option value="{{ option }}">{{ option }}</option>
+            {% endfor %}
+        </select>
+        <select id="dropdown_currency" name="dropdown_currency">
+            <option value="" disabled selected>Select Currency</option>
+            {% for option in stuff.currency_symbols %}
+                <option value="{{ option }}">{{ option }}</option>
+            {% endfor %}
+        </select>
+    </form>
+
     <button onclick="changeToLine()">Line Graph</button>
     <button onclick="changeToBar()">Bar Graph</button>
     <input type="range" min="1" max="100" value="10" class="slider" id="mySlider">
