Fix static assets

--- a/vis_crypto/templates/vis_crypto/base.html
+++ b/vis_crypto/templates/vis_crypto/base.html
@@ -5,8 +5,8 @@
     <head>
         <meta charset="UTF-8">
         <title>Crypto Currency Visualization</title>
-        <link rel="stylesheet" href="{% static 'Vis_Cryp/base.css' %}">
-        <link rel="stylesheet" href="{% static 'Vis_Cryp/chart.css' %}">
+        <link rel="stylesheet" href="{% static 'base.css' %}">
+        <link rel="stylesheet" href="{% static 'chart.css' %}">
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     </head>
     <body style="margin-top:150px">
