integrate with base

--- a/vis_crypto/templates/vis_crypto/base.html
+++ b/vis_crypto/templates/vis_crypto/base.html
@@ -9,6 +9,7 @@
         <link rel="stylesheet" href="{% static 'chart.css' %}">
         <link rel="stylesheet" href="{% static 'barView.css' %}">
         <link rel="stylesheet" href="{% static 'exchange.css' %}">
+        <link rel="stylesheet" href="{% static 'pieChart.css' %}">
         <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     </head>
     <body style="margin-top:150px">
@@ -21,6 +22,9 @@
             </div>
             <div class="grid-item">
                 {% include content2.template_name with exchange_rates=content2.data.exchange_rates %}
+            </div>
+            <div class="grid-item">
+                {% include content4.template_name with coins=content4.data.top_ten_crypto %}
             </div>
         </div>
     </div>
