Add heading and styling

--- a/vis_crypto/static/base.css
+++ b/vis_crypto/static/base.css
@@ -8,3 +8,22 @@
     border: 1px solid rgba(255, 255, 255, 0.8);
     padding: 20px;
   }
+
+  .eight h1 {
+    text-align:center;
+   
+    text-transform:uppercase;
+    font-size:26px; letter-spacing:1px;
+    
+    display: grid;
+    grid-template-columns: 1fr auto 1fr;
+    grid-template-rows: 16px 0;
+    grid-gap: 22px;
+  }
+  
+  .eight h1:after,.eight h1:before {
+    content: " ";
+    display: block;
+    border-bottom: 2px solid #ccc;
+    background-color:#f8f8f8;
+  }
